# taos-udf

./: .gitmodules  LICENSE
Python/.github/workflows/: conda.yml
Python/src/: taospyudf.cpp
Python/tests/: test_basic.py  test_error.py  test_single.py  udf1.py  udf2.py  udfagg.py
python/: CMakeLists.txt  README.md  pyproject.toml
python/conda.recipe/: meta.yaml
python/src/: taospyudf.cpp
python/tests/: test_agg.py  test_basic.py  test_error.py  test_perf.py  test_scalar.py  test_single.py
python/tests/c-udf/: compile_udf.sh
python/tests/py-udf/: udf1_miss_func.py  udf1_wrong_rows.py  udf1slow.py  udf1v2.py  udf2_miss_func.py  udf3rd.py  udfscalar.py
